<!-- 

  Site creation:
  ==============
  	mvn install site site:stage
  	
  	Result in <Sirius>/target/staging/
  	
  
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.sirius</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <url>https://github.com/jpragey/Sirius</url>
  
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.compilerVersion>11</maven.compiler.compilerVersion>
    
    <sirius.version>0.0.1-SNAPSHOT</sirius.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    
<!--    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>-->
    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
    <junit-jupiter.version>5.6.2</junit-jupiter.version>
    
    <additionalparam>-Xdoclint:none</additionalparam>
    
    <libs.antlr4.version>4.9.1</libs.antlr4.version>
    
  </properties>

  <modules>
    <module>org.sirius.common</module>
    
    <module>org.sirius.sdk</module>
    <module>org.sirius.runtime</module>
    <module>org.sirius.frontend</module>
    <module>org.sirius.compiler</module>
    <module>org.sirius.backend.core</module>
    <module>org.sirius.backend.jvm</module>
    
  </modules>

  <dependencyManagement>
	<dependencies>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.common</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.sdk</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.runtime</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.compiler</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.frontend</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.backend.core</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>org.sirius.backend.jvm</artifactId>
			<version>${sirius.version}</version>
		</dependency>

		<dependency>
			<groupId>org.sirius</groupId>
			<artifactId>runtime</artifactId>
			<version>${sirius.version}</version>
		</dependency>

<!-- 		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>29.0-jre</version>
		</dependency>
 -->
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-engine</artifactId>
	        <version>${junit-jupiter.version}</version>
	        <scope>test</scope>
	    </dependency>
	    
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-api</artifactId>
	        <version>${junit-jupiter.version}</version>
	        <scope>test</scope>
	    </dependency>
	    
	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-params</artifactId>
	        <version>${junit-jupiter.version}</version>
	        <scope>test</scope>
	    </dependency>
	    
		<dependency>
    		<groupId>org.mockito</groupId>
    		<artifactId>mockito-core</artifactId>
    		<version>3.3.3</version>
    		<scope>test</scope>
  		</dependency>
    
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-junit-jupiter</artifactId>
		    <version>3.3.3</version>
		    <scope>test</scope>
		</dependency>
		    
	    <dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
	    
	</dependencies>
  </dependencyManagement>
  
  <dependencies>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-api</artifactId>
  	</dependency>
  	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter</artifactId>
		<version>${junit-jupiter.version}</version>
		<scope>test</scope>
	</dependency>
  </dependencies>
  
  <distributionManagement>
  	<site>
  		<id>staging</id>
  		<name>Dev. snapshot (temporary - TODO)</name>
  		<url>file:///tmp/sirius-todo</url>
  	</site>
  </distributionManagement>
  
  <build>
  	<pluginManagement>
  		<plugins>
  			<plugin>
	          <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-site-plugin</artifactId>
              <version>3.9.1</version>
              <configuration>
              
<!-- 		        <asciidoc>
		            <templateDirs>
		                <dir>src/site/asciidoc/templates</dir>
		            </templateDirs>
		        </asciidoc>
 -->
 		      </configuration>
              <dependencies>
              
                 <dependency>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>2.1.0</version>
                </dependency>
                
                <dependency>
		            <groupId>org.asciidoctor</groupId>
		            <artifactId>asciidoctorj-diagram</artifactId>
		            <version>2.1.0</version>
		        </dependency>

               </dependencies>
  			</plugin>
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-project-info-reports-plugin</artifactId>
			  <version>3.1.1</version>
        	</plugin>
        </plugins>
  	</pluginManagement>
  	
  	<plugins>
  	<plugin>
		<artifactId>maven-compiler-plugin</artifactId>
			<version>3.8.1</version>
			<configuration>
				<source>${maven.compiler.source}</source>
				<target>${maven.compiler.target}</target>
				<compilerVersion>${maven.compiler.compilerVersion}15</compilerVersion>
				
				<compilerArgs>
					<arg>-parameters</arg>
				</compilerArgs>

			</configuration>
		</plugin>

		<plugin>
		 	<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>${maven-surefire-plugin.version}</version>
	
			<configuration>
				<argLine>-Xmx1024m</argLine>
			</configuration>
		</plugin>

  		<plugin>
			<groupId>org.asciidoctor</groupId>
			<artifactId>asciidoctor-maven-plugin</artifactId>
			<version>2.1.0</version>
 			
     		<configuration>
     			<requires>
     			       	<!-- Tried:
		            	sudo apt install ruby
		            	sudo gem install asciidoctor-diagram
		            	 -->
     				<require>asciidoctor-diagram</require>
     			</requires>
     		</configuration>
     		<dependencies>
                 <dependency>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>2.1.0</version>
                </dependency>
                
                <dependency>
		            <groupId>org.asciidoctor</groupId>
		            <artifactId>asciidoctorj-diagram</artifactId>
		            <version>2.1.0</version>
		        </dependency>
     		</dependencies>
     		<executions>
     			<execution>
     				<id>generate-html-doc</id>
     				<phase>generate-resources</phase>
     				<goals>
     					<goal>process-asciidoc</goal>
     				</goals>
     				<configuration>
      					<backend>html5</backend>   
     
     					<outputDirectory>target/site/mydocs</outputDirectory>
     					<attributes>
			                <source-highlighter>coderay</source-highlighter>
			                <coderay-css>style</coderay-css>
      					</attributes>
     				</configuration>
     			</execution>
     		</executions>
     		
		</plugin>

		<plugin>
        	<groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-site-plugin</artifactId>
        </plugin>
	
  	</plugins>
  </build>
  
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <doclint>none</doclint> <!-- Temp, ignore (numerous) missing docs -->
          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
        </configuration>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>        
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
          <reportSet>
            <id>default</id>
            <reports>
            <!-- Temp
              <report>javadoc</report>
               -->
            </reports>
          </reportSet>
        </reportSets>
        
      </plugin>
    </plugins>
  </reporting>
</project>
